@@ -10,6 +10,7 @@
 - improved `API()`, the API `name` can now be called in lowercase
 - extended `FAKE()` by adding inline JSON schemas specification
 - extended `SCHEDULE()` method by adding support of `cron` basics
+- added `QueryBuilder.permit(name, type, value, [useridfield], [userid], [required])` method
 
 ========================
 0.0.83
